
- Plugin Manager Manage Panel sortable on all columns and all directions
 (Eric Le Lay)

}}}
{{{ Miscellaneous

- New Korean translation file (Patch #551 - yaraba)

- Resize performance improvement (Patch #547 - Sergey Mashkov)

- Properties are sorted when saved (Feature Request #342, Patch #536 - Makarius)

- Configure the JUnit task to fork off the Ant process, with manually adding the
  needed Ant libraries. This ensures that there are no unwanted classpath
  entries during test execution (Plugin Bug #1732 - Björn "Vampire" Kautler)

}}}
{{{ API Changes

- View now sends ViewUpdate message on EditBus when full screen mode is toggled.
  This is useful to plugins that may need to adjust their appearance when the
  screen mode is toggled. (Dale Anson)

- close-all sends BufferClosing events on EditBus for each buffer closed.
  This is useful to plugins that record closed files. (patch #550, Eric Le Lay)

- org.gjt.sp.util.StandardUtilities#compareStrings accepts null Strings
  (Eric Le Lay)

}}}
{{{ Editing

- Updates to Clojure mode (Marc M. Adkins, patch #565)

- More conventional color scheme for diffs and changesets
  (Patch #560 - Makarius)

- Updates to Scala Mode (Patch #554 - Makarius)

- New mode for rust (Patches #553, #556 - Jordan Miner)

- New mode for Kotlin syntax (Patch #552 - Sergey Mashkov)

- Updates to cfscript mode (Patch #531 - Darien Brown)

- New mode for ANS Forth 1994 (Patch #530 - Mark Corbin)

- New mode for mustache templates (Patch #532 - Kevin Hunter Kesling)

- New mode for Antlr 4 (Dale Anson)

- Updates to properties mode (Bug #2640 - Dale Anson)

- Updated Go mode (Feature request 496, ahlearn). This also fixes bug #3921.

- Allow editing, but not saving, of read only files.
  (Feature request #422 - Dale Anson)

- Added Markdown mode from Peter Lynch (FR 495 - Dale Anson)

}}}
}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: